using System.Net.Sockets;
using Axlebolt.RpcSupport.Protobuf;
using Axlebolt.Bolt.Protobuf2;
using StandRiseServer.Core;
using Google.Protobuf;

namespace StandRiseServer.Services;

public class AccountLinkService
{
    private readonly ProtobufHandler _handler;
    private readonly DatabaseService _database;
    private readonly SessionManager _sessionManager;

    public AccountLinkService(ProtobufHandler handler, DatabaseService database, SessionManager sessionManager)
    {
        _handler = handler;
        _database = database;
        _sessionManager = sessionManager;

        Console.WriteLine("üîó Registering AccountLinkService handlers...");
        _handler.RegisterHandler("AccountLinkRemoteService", "createLinkTicket", CreateLinkTicketAsync);
        _handler.RegisterHandler("AccountLinkRemoteService", "getPlayerByTicket", GetPlayerByTicketAsync);
        _handler.RegisterHandler("AccountLinkRemoteService", "linkAccount", LinkAccountAsync);
        _handler.RegisterHandler("AccountLinkRemoteService", "unlinkAccount", UnlinkAccountAsync);
        Console.WriteLine("üîó AccountLinkService handlers registered!");
    }

    private async Task CreateLinkTicketAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("üîó CreateLinkTicket Request");

            var ticket = Guid.NewGuid().ToString("N").Substring(0, 8).ToUpper();
            var ticketStr = new Axlebolt.RpcSupport.Protobuf.String { Value = ticket };

            var result = new BinaryValue
            {
                IsNull = false,
                One = ByteString.CopyFrom(ticketStr.ToByteArray())
            };

            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
            Console.WriteLine($"üîó Link ticket created: {ticket}");
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå CreateLinkTicket: {ex.Message}");
        }
    }

    private async Task GetPlayerByTicketAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("üîó GetPlayerByTicket Request");

            // –í–æ–∑–≤—Ä–∞—â–∞–µ–º null –µ—Å–ª–∏ —Ç–∏–∫–µ—Ç –Ω–µ –Ω–∞–π–¥–µ–Ω
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GetPlayerByTicket: {ex.Message}");
        }
    }

    private async Task LinkAccountAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("üîó LinkAccount Request");
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå LinkAccount: {ex.Message}");
        }
    }

    private async Task UnlinkAccountAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("üîó UnlinkAccount Request");
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå UnlinkAccount: {ex.Message}");
        }
    }
}
