using System.Net.Sockets;
using Axlebolt.RpcSupport.Protobuf;
using StandRiseServer.Core;
using Google.Protobuf;

namespace StandRiseServer.Services;

public class AdsRemoteService
{
    private readonly ProtobufHandler _handler;
    private readonly DatabaseService _database;
    private readonly SessionManager _sessionManager;

    public AdsRemoteService(ProtobufHandler handler, DatabaseService database, SessionManager sessionManager)
    {
        _handler = handler;
        _database = database;
        _sessionManager = sessionManager;

        Console.WriteLine("üì∫ Registering AdsRemoteService handlers...");
        _handler.RegisterHandler("AdsRemoteService", "giveAdReward", GiveAdRewardAsync);
        Console.WriteLine("üì∫ AdsRemoteService handlers registered!");
    }

    private async Task GiveAdRewardAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("üì∫ GiveAdReward Request");

            var session = _sessionManager.GetSessionByClient(client);
            if (session == null)
            {
                session = _sessionManager.GetAllSessions().FirstOrDefault();
                if (session != null) session.Client = client;
            }

            string conditions = "";
            if (request.Params.Count > 0 && request.Params[0].One != null)
            {
                var condStr = Axlebolt.RpcSupport.Protobuf.String.Parser.ParseFrom(request.Params[0].One);
                conditions = condStr.Value;
            }

            Console.WriteLine($"üì∫ Ad reward conditions: {conditions}");

            // –î–∞–µ–º –Ω–∞–≥—Ä–∞–¥—É –∏–≥—Ä–æ–∫—É
            if (session != null)
            {
                var player = await _database.GetPlayerByTokenAsync(session.Token);
                if (player != null)
                {
                    // –ù–∞–≥—Ä–∞–¥–∞ –∑–∞ –ø—Ä–æ—Å–º–æ—Ç—Ä —Ä–µ–∫–ª–∞–º—ã - 100 –º–æ–Ω–µ—Ç
                    player.Coins += 100;
                    await _database.UpdatePlayerAsync(player);
                    Console.WriteLine($"üì∫ Player {player.Name} received ad reward: +100 coins");
                }
            }

            // void –º–µ—Ç–æ–¥ - –≤–æ–∑–≤—Ä–∞—â–∞–µ–º null
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GiveAdReward: {ex.Message}");
        }
    }
}
