using System.Net.Sockets;
using Axlebolt.RpcSupport.Protobuf;
using Axlebolt.Bolt.Protobuf2;
using StandRiseServer.Core;
using Google.Protobuf;

namespace StandRiseServer.Services;

public class GameServerService
{
    private readonly ProtobufHandler _handler;
    private readonly DatabaseService _database;
    private readonly SessionManager _sessionManager;

    public GameServerService(ProtobufHandler handler, DatabaseService database, SessionManager sessionManager)
    {
        _handler = handler;
        _database = database;
        _sessionManager = sessionManager;

        Console.WriteLine("üéÆ Registering GameServerService handlers...");
        _handler.RegisterHandler("GameServerRemoteService", "serverHandshake", ServerHandshakeAsync);
        _handler.RegisterHandler("GameServerRemoteService", "logout", LogoutAsync);
        _handler.RegisterHandler("GameServerPlayerRemoteService", "setPhotonGame", SetPhotonGameAsync);
        _handler.RegisterHandler("GameServerStatsRemoteService", "getStats", GetGameServerStatsAsync);
        _handler.RegisterHandler("GameServerStatsRemoteService", "storeStats", StoreGameServerStatsAsync);
        _handler.RegisterHandler("GameServerStatsRemoteService", "getPlayersStats", GetPlayersStatsAsync);
        Console.WriteLine("üéÆ GameServerService handlers registered!");
    }

    private async Task ServerHandshakeAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("üéÆ ServerHandshake Request");
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå ServerHandshake: {ex.Message}");
        }
    }

    private async Task LogoutAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("üéÆ Logout Request");
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå Logout: {ex.Message}");
        }
    }

    private async Task SetPhotonGameAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("üéÆ SetPhotonGame Request");
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå SetPhotonGame: {ex.Message}");
        }
    }

    private async Task GetGameServerStatsAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("üéÆ GetGameServerStats Request");
            
            var stats = new Stats();
            var result = new BinaryValue
            {
                IsNull = false,
                One = ByteString.CopyFrom(stats.ToByteArray())
            };
            
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GetGameServerStats: {ex.Message}");
        }
    }

    private async Task StoreGameServerStatsAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("üéÆ StoreGameServerStats Request");
            var result = new BinaryValue { IsNull = true };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå StoreGameServerStats: {ex.Message}");
        }
    }

    private async Task GetPlayersStatsAsync(TcpClient client, RpcRequest request)
    {
        try
        {
            Console.WriteLine("üéÆ GetPlayersStats Request");
            var result = new BinaryValue { IsNull = false };
            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
        }
        catch (Exception ex)
        {
            Console.WriteLine($"‚ùå GetPlayersStats: {ex.Message}");
        }
    }
}
